--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "http-proxy-middleware": "^2.0.6",
     "nanoid": "^4.0.0",
     "node-upbit": "^1.1.0",
+    "papaparse": "^5.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
@@ -51,6 +52,7 @@
   "devDependencies": {
     "@types/axios": "^0.14.0",
     "@types/coingecko-api": "^1.0.10",
+    "@types/papaparse": "^5.3.7",
     "@types/styled-components": "^5.1.26",
     "gh-pages": "^4.0.0",
     "netlify-cli": "^12.0.11"
