--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@types/papaparse": "^5.3.7",
     "@types/styled-components": "^5.1.26",
     "gh-pages": "^4.0.0",
-    "netlify-cli": "^12.0.11"
+    "netlify-cli": "^12.0.11",
+    "react-error-overlay": "6.0.9"
   }
 }
