--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-scripts": "^4.0.3",
+    "sentiment": "^5.0.2",
     "styled-components": "^5.3.6",
     "typescript": "^4.8.4",
     "web-vitals": "^2.1.4"
@@ -53,6 +54,7 @@
     "@types/axios": "^0.14.0",
     "@types/coingecko-api": "^1.0.10",
     "@types/papaparse": "^5.3.7",
+    "@types/sentiment": "^5.0.1",
     "@types/styled-components": "^5.1.26",
     "gh-pages": "^4.0.0",
     "netlify-cli": "^12.0.11",
