--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "papaparse": "^5.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.0",
     "react-icons": "^4.7.1",
     "react-scripts": "^4.0.3",
     "sentiment": "^5.0.2",
